--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   dartz: ^0.10.1
   dio: ^5.4.3+1
   loader_overlay: ^4.0.0
+  flutter_secure_storage: ^9.0.0
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
