--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   loader_overlay: ^4.0.0
   flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.3
+  google_maps_flutter: ^2.6.1
+
 
 dev_dependencies:
   flutter_test:
