--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.2.3
   google_maps_flutter: ^2.6.1
+  cached_network_image: ^3.3.1
 
 
 dev_dependencies:
